# advc

./: CMakeLists.txt  README.md  compile.sh  compile_and_run.sh  recompile.sh  recompile_and_run.sh  run.sh
operators/: CMakeLists.txt  c_class_excercise.cpp  c_class_solution.cpp  stream_operator_solution.cpp  vector_3d_solution.cpp
pointers/: CMakeLists.txt  min_element_excercise.cpp  min_element_function_excercise.cpp  min_element_function_solution.cpp  min_element_solution.cpp  shape_solution.cpp
templates/: CMakeLists.txt  circular_buffer_excercise.cpp  circular_buffer_solution.cpp  matrix.cpp  operator_vector_excercise.cpp  operator_vector_solution.cpp  simple_string.cpp  simple_string_functions_excercise.cpp  simple_string_functions_solution.cpp  simple_string_operators_solution.cpp  template_array_excercise.cpp  template_array_solution.cpp
